--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
+    "node-fetch": "^2.6.6",
     "nodemon": "^2.0.20"
   }
 }
